--- a/Week_1_Seminar.ipynb
+++ b/Week_1_Seminar.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68e5d03c",
+   "id": "a30d607a",
    "metadata": {},
    "source": [
     "Like strings, lists have their own built in functions that you can make use of:\n",
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3e7d68cc",
+   "id": "89ec4f97",
    "metadata": {},
    "outputs": [
     {
@@ -930,14 +930,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10341bd5",
+   "id": "daff9667",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "6eeac236",
+   "id": "f5b6e3e2",
    "metadata": {},
    "source": [
     "# Making use of libraries - Natural Language Toolkit"
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2055ce19",
+   "id": "50675d09",
    "metadata": {},
    "source": [
     "So far in this session we have been looking at the core Python programming language. However much of the time this semester we will be making use of not just core Python but also powerful libraries for natural language processing and machine learning. Today I want to introduce the first of these - \"Natural Language Toolkit\" or nltk - in order to explain how libraries work.\n",
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceca7d0d",
+   "id": "208c8f1e",
    "metadata": {},
    "source": [
     "In order to use the library we then need to import it"
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "aa125565",
+   "id": "f32b6fda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,12 +983,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e8760a",
+   "id": "b6fac3ea",
    "metadata": {},
    "source": [
-    "Once we have \n",
-    "\n",
-    "In this brief intro to Python we have already performed two tasks: word tokenizing and the sentence segmentation. These split the input word sequence into words and sentences respectively. They are a surprisingly difficult tasks and we will talk next week about the many different ways these tasks can be accomplished. For now I just want to show that they are tasks that can be performed using nltk, with the tools word_tokenize and sent_tokenize which are now imported."
+    "In this brief intro to Python we have already performed two NLP tasks: word tokenizing and sentence segmentation. These split the input word sequence into words and sentences respectively. They are a surprisingly difficult tasks and we will talk next week about the many different ways these tasks can be accomplished. For now I just want to show that they are tasks that can be performed using nltk, with the tools word_tokenize and sent_tokenize which are now imported."
    ]
   },
   {
@@ -1032,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f487abcb",
+   "id": "c4b72ccf",
    "metadata": {},
    "outputs": [],
    "source": []
