--- a/Week_1_Seminar.ipynb
+++ b/Week_1_Seminar.ipynb
@@ -307,7 +307,7 @@
    "id": "a78de597",
    "metadata": {},
    "source": [
-    "Exercise: create a sentence in list form for the sequence \"I am a cat\". Then use substring selection to produce the sentence \"I am a big cat\"."
+    "Exercise: create a sentence in list form for the sequence \"George is a cat\". Then use substring selection to produce the sentence \"George is a big cat\"."
    ]
   },
   {
