--- a/Week_1_Seminar.ipynb
+++ b/Week_1_Seminar.ipynb
@@ -181,7 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "str.capitalize(\"bob\") "
+    "name=\"tom\"\n",
+    "str.capitalize(name) "
    ]
   },
   {
@@ -191,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "str.upper(\"bob\")"
+    "str.upper(name)"
    ]
   },
   {
@@ -199,7 +200,7 @@
    "id": "671970b9",
    "metadata": {},
    "source": [
-    "Exercise: Use a function to test whether the word \"bob\" contains the letter \"o\""
+    "Exercise: Use a function to turn the name tom into the name tommy"
    ]
   },
   {
@@ -208,7 +209,9 @@
    "id": "67ad44ab",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "name.replace(\"m\",\"mmy\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -371,7 +374,7 @@
    "id": "aba8b86e",
    "metadata": {},
    "source": [
-    "As you will notice this reads texts in as single strings. As discussed before we usually want to represent sentences in a way that reflects word boundaries. The simplest way to do it is to split on spaces. As we will see there are all sorts of problems with doing this, but for now we'll ignore that and use a built in string function split()."
+    "As you will notice this reads texts in as single strings. As discussed before we usually want to represent sentences in a way that reflects word boundaries. The simplest way to do it is to split on spaces. As we will see there are all sorts of problems with doing this, but for now we'll ignore that and use a built in string function split(). In order to make sure it deals with full stops as we would like we will also use the replace function to separate them from the ends of words."
    ]
   },
   {
@@ -381,6 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "chapter_one = chapter_one.replace(\".\",\" .\")\n",
     "chapter_one_tokens = str.split(chapter_one)\n",
     "print(chapter_one_tokens)"
    ]
@@ -562,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "588ab8b0",
+   "id": "942132c0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -574,6 +578,14 @@
    "source": [
     "# Making use of libraries - Natural Language Toolkit"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31d15f18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -610,7 +622,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nltk"
+    "import nltk\n",
+    "nltk.download('punkt')"
    ]
   },
   {
@@ -658,6 +671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nltk.download('averaged_perceptron_tagger')\n",
     "nltk.pos_tag(chapter_one_tokens)"
    ]
   },
@@ -700,6 +714,22 @@
     "for tree in rd_parser.parse(sent):\n",
     "    print(tree)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebd0da00-76e4-487d-b26d-e0e1d838f7bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4785a26b-63ce-4441-9219-a218332c453f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
