--- a/Week_1_Seminar.ipynb
+++ b/Week_1_Seminar.ipynb
@@ -28,7 +28,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f9906764",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "i = 10"
@@ -46,7 +48,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e1b8536a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "i+1*3/2"
@@ -66,7 +70,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ddecf601",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "j = \"My name is Harry\""
@@ -84,7 +90,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7005e36f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "k = j + \" Kane\""
@@ -102,7 +110,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5a86d8f5",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(k)"
@@ -120,7 +130,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4a056c33",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(j + \"Kane\")"
@@ -138,7 +150,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5125df97",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(k + \" and my shirt number is \" + i)"
@@ -156,7 +170,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8619e2e5",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(k + \" and my shirt number is \" + str(i))"
@@ -177,8 +193,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f170849",
-   "metadata": {},
+   "id": "a2ab14c4",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "name=\"tom\"\n",
@@ -188,8 +206,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8927d6b8",
-   "metadata": {},
+   "id": "ceb6e258",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "str.upper(name)"
@@ -197,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "671970b9",
+   "id": "7e7498a1",
    "metadata": {},
    "source": [
     "Exercise: Use a function to turn the name tom into the name tommy"
@@ -207,7 +227,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "67ad44ab",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -225,7 +247,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3a5be46f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sentence = [\"this\", \"is\", \"a\", \"sentence\"]"
@@ -243,7 +267,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "39ec0d58",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\" \".join(sentence))"
@@ -261,7 +287,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b7519cd5",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(sentence[2])"
@@ -279,7 +307,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2f15bd8c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\" \".join(sentence[0:2]))"
@@ -297,7 +327,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "82e133f3",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\" \".join(sentence[0:3]) + \" short \" + sentence[3])"
@@ -315,7 +347,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fd68d4c6",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -346,7 +380,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1d6ca39b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# If using colab\n",
@@ -358,7 +394,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "90044a37",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f = open('2554-0.txt')\n",
@@ -379,7 +417,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6a290b73",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chapter_one = chapter_one.replace(\".\",\" .\")\n",
@@ -401,7 +441,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4bb2115a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for word in chapter_one_tokens:\n",
@@ -422,7 +464,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c98155bd",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "k=0\n",
@@ -445,7 +489,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "707d9832",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "2==2"
@@ -455,7 +501,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ce56a860",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "2==3"
@@ -465,7 +513,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1a91600b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chapter_one_tokens[0] == \"On\""
@@ -475,7 +525,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "27773fbe",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chapter_one_tokens[0] == \"a\""
@@ -495,7 +547,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "590040ee",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "2 > 1"
@@ -513,7 +567,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2f74038e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if chapter_one_tokens[0] == \"On\":\n",
@@ -524,7 +580,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "32f669e8",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if chapter_one_tokens[0] != \"a\":\n",
@@ -543,7 +601,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db0b9f8b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "k=0\n",
@@ -564,8 +624,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9316bd5",
-   "metadata": {},
+   "id": "4cad0030",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -580,8 +642,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51dbb4bc",
-   "metadata": {},
+   "id": "e9dfa932",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -599,7 +663,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5ce18b3c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!pip install nltk # If using anaconda"
@@ -617,7 +683,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "18163496",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -636,7 +704,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5b07ef3d",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chapter_one_tokens = nltk.word_tokenize(chapter_one)\n",
@@ -647,7 +717,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "21b7beff",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "chapter_one_sentences = nltk.sent_tokenize(' '.join(chapter_one_tokens))\n",
@@ -666,7 +738,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "646df579",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nltk.download('averaged_perceptron_tagger')\n",
@@ -685,7 +759,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ab74a642",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grammar1 = nltk.CFG.fromstring(\"\"\"\n",
@@ -704,7 +780,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a430a0b1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sent = \"Mary saw Bob\".split()\n",
@@ -717,7 +795,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ebd0da00-76e4-487d-b26d-e0e1d838f7bf",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -725,7 +805,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4785a26b-63ce-4441-9219-a218332c453f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
