--- a/Week_1_Seminar.ipynb
+++ b/Week_1_Seminar.ipynb
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ab14c4",
+   "id": "067a8cea",
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceb6e258",
+   "id": "edc15084",
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7498a1",
+   "id": "da9dd1b8",
    "metadata": {},
    "source": [
     "Exercise: Use a function to turn the name tom into the name tommy"
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cad0030",
+   "id": "42bb456b",
    "metadata": {
     "collapsed": true
    },
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9dfa932",
+   "id": "681aff3e",
    "metadata": {
     "collapsed": true
    },
@@ -698,6 +698,19 @@
    "metadata": {},
    "source": [
     "In this brief intro to Python we have already performed two NLP tasks: word tokenizing and sentence segmentation. These split the input word sequence into words and sentences respectively. They are a surprisingly difficult tasks and we will talk next week about the many different ways these tasks can be accomplished. For now I just want to show that they are tasks that can be performed using nltk, with the tools word_tokenize and sent_tokenize which are now imported."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c36a58b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('2554-0.txt')\n",
+    "raw = f.read()\n",
+    "chapter_one = raw[5464:23725]\n",
+    "print(chapter_one)"
    ]
   },
   {
