--- a/Week_1_Seminar.ipynb
+++ b/Week_1_Seminar.ipynb
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86fb3502",
+   "id": "521f72d7",
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acddb88c",
+   "id": "434abd95",
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb1b818",
+   "id": "4246aa03",
    "metadata": {},
    "source": [
     "Exercise: Use a function to turn the name tom into the name tommy"
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06d227cf",
+   "id": "798bc514",
    "metadata": {
     "collapsed": true
    },
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "598e9aee",
+   "id": "bf5194bb",
    "metadata": {
     "collapsed": true
    },
@@ -697,13 +697,13 @@
    "id": "709a3544",
    "metadata": {},
    "source": [
-    "In this brief intro to Python we have already performed two NLP tasks: word tokenizing and sentence segmentation. These split the input word sequence into words and sentences respectively. They are a surprisingly difficult tasks and we will talk next week about the many different ways these tasks can be accomplished. For now I just want to show that they are tasks that can be performed using nltk, with the tools word_tokenize and sent_tokenize which are now imported."
+    "In this brief intro to Python we have already performed two NLP tasks: word tokenizing and sentence segmentation. These split the input word sequence into words and sentences respectively. They are a surprisingly difficult tasks and we will talk next week about the many different ways these tasks can be accomplished. For now I just want to show that they are tasks that can be performed using nltk, with the tools word_tokenize and sent_tokenize which are now imported. And as you will see they do better than our attempts did."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad7cb3a1",
+   "id": "a937b43a",
    "metadata": {},
    "outputs": [],
    "source": [
