--- a/Week_1_Seminar.ipynb
+++ b/Week_1_Seminar.ipynb
@@ -28,9 +28,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f9906764",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "i = 10"
@@ -48,9 +46,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e1b8536a",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "i+1*3/2"
@@ -70,9 +66,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ddecf601",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "j = \"My name is Harry\""
@@ -90,9 +84,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7005e36f",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "k = j + \" Kane\""
@@ -110,9 +102,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5a86d8f5",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(k)"
@@ -130,9 +120,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4a056c33",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(j + \"Kane\")"
@@ -150,9 +138,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5125df97",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(k + \" and my shirt number is \" + i)"
@@ -170,9 +156,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8619e2e5",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(k + \" and my shirt number is \" + str(i))"
@@ -194,9 +178,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "521f72d7",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "name=\"tom\"\n",
@@ -207,9 +189,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "434abd95",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "str.upper(name)"
@@ -222,16 +202,6 @@
    "source": [
     "Exercise: Use a function to turn the name tom into the name tommy"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67ad44ab",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -247,9 +217,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3a5be46f",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sentence = [\"this\", \"is\", \"a\", \"sentence\"]"
@@ -267,9 +235,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "39ec0d58",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\" \".join(sentence))"
@@ -287,9 +253,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b7519cd5",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(sentence[2])"
@@ -307,9 +271,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2f15bd8c",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\" \".join(sentence[0:2]))"
@@ -327,9 +289,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "82e133f3",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\" \".join(sentence[0:3]) + \" short \" + sentence[3])"
@@ -347,9 +307,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fd68d4c6",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -380,9 +338,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1d6ca39b",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# If using colab\n",
@@ -394,9 +350,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "90044a37",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f = open('2554-0.txt')\n",
@@ -417,9 +371,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6a290b73",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "chapter_one = chapter_one.replace(\".\",\" .\")\n",
@@ -441,9 +393,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4bb2115a",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for word in chapter_one_tokens:\n",
@@ -464,9 +414,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c98155bd",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "k=0\n",
@@ -489,9 +437,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "707d9832",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "2==2"
@@ -501,9 +447,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ce56a860",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "2==3"
@@ -513,9 +457,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1a91600b",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "chapter_one_tokens[0] == \"On\""
@@ -525,9 +467,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "27773fbe",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "chapter_one_tokens[0] == \"a\""
@@ -547,9 +487,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "590040ee",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "2 > 1"
@@ -567,9 +505,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2f74038e",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if chapter_one_tokens[0] == \"On\":\n",
@@ -580,9 +516,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "32f669e8",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if chapter_one_tokens[0] != \"a\":\n",
@@ -601,9 +535,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db0b9f8b",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "k=0\n",
@@ -615,212 +547,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "71b13820",
+   "metadata": {},
+   "source": [
+    "As well as nesting statements inside \"if\" statements so that they are only actioned if a condition holds, we can use an \"else\" statement to tell the computer what to do if the condition doesn't hold. This immediately follows the if statement, indented so that it lines up vertically with the if statement with which it is paired. So for example we can add to the code immediately above in order to also count tokens that are not \"a\", as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "331bc7f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k=0\n",
+    "j=0\n",
+    "for token in chapter_one_tokens:\n",
+    "    if token == \"a\":\n",
+    "        k = k+1\n",
+    "    else:\n",
+    "        j = j+1\n",
+    "print(\"indefinite article count: \" + str(k))\n",
+    "print(\"other token count: \" + str(j))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1344f88a",
    "metadata": {},
    "source": [
-    "Activity: Use a for loop to print out the text as we did above but print each sentence on a new line. For simplicity we can assume that all sentences end with a \".\" character."
+    "Activity: Use a for loop to print out the text as we did above but try to print each sentence on a new line. For simplicity let's assume (wrongly as we will see) that all sentences end with a \".\" character."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "798bc514",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6f1ffab",
    "metadata": {},
-   "source": [
-    "# Making use of libraries - Natural Language Toolkit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf5194bb",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d60a2b8a",
-   "metadata": {},
-   "source": [
-    "So far in this session we have been looking at the core Python programming language. However much of the time this semester we will be making use of not just core Python but also powerful libraries for natural language processing and machine learning. Today I want to introduce the first of these - \"Natural Language Toolkit\" or nltk - in order to explain how libraries work.\n",
-    "\n",
-    "The first thing we need to do is to make sure we have the libraries we want installed. On Google Colab they are all already there. If your are using your own machine you will have to install it using the following command."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ce18b3c",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "!pip install nltk # If using anaconda"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "75b8fcd3",
-   "metadata": {},
-   "source": [
-    "In order to use the library we then need to import it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18163496",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import nltk\n",
-    "nltk.download('punkt')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "709a3544",
-   "metadata": {},
-   "source": [
-    "In this brief intro to Python we have already performed two NLP tasks: word tokenizing and sentence segmentation. These split the input word sequence into words and sentences respectively. They are a surprisingly difficult tasks and we will talk next week about the many different ways these tasks can be accomplished. For now I just want to show that they are tasks that can be performed using nltk, with the tools word_tokenize and sent_tokenize which are now imported. And as you will see they do better than our attempts did."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a937b43a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = open('2554-0.txt')\n",
-    "raw = f.read()\n",
-    "chapter_one = raw[5464:23725]\n",
-    "print(chapter_one)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b07ef3d",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "chapter_one_tokens = nltk.word_tokenize(chapter_one)\n",
-    "print(chapter_one_tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21b7beff",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "chapter_one_sentences = nltk.sent_tokenize(' '.join(chapter_one_tokens))\n",
-    "print(chapter_one_sentences[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "98675eb7",
-   "metadata": {},
-   "source": [
-    "We can also use NLTK to perform versions of the tasks I discussed in my lecture this week. First POS tagging which assigns tags to words using the following tagset:https://www.cs.upc.edu/~nlp/SVMTool/PennTreebank.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "646df579",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "nltk.download('averaged_perceptron_tagger')\n",
-    "nltk.pos_tag(chapter_one_tokens)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1c04e8f3",
-   "metadata": {},
-   "source": [
-    "And parsing:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab74a642",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "grammar1 = nltk.CFG.fromstring(\"\"\"\n",
-    "  S -> NP VP\n",
-    "  VP -> V NP | V NP PP\n",
-    "  PP -> P NP\n",
-    "  V -> \"saw\" | \"ate\" | \"walked\"\n",
-    "  NP -> \"John\" | \"Mary\" | \"Bob\" | Det N | Det N PP\n",
-    "  Det -> \"a\" | \"an\" | \"the\" | \"my\"\n",
-    "  N -> \"man\" | \"dog\" | \"cat\" | \"telescope\" | \"park\"\n",
-    "  P -> \"in\" | \"on\" | \"by\" | \"with\"\n",
-    "  \"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a430a0b1",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sent = \"Mary saw Bob\".split()\n",
-    "rd_parser = nltk.RecursiveDescentParser(grammar1)\n",
-    "for tree in rd_parser.parse(sent):\n",
-    "    print(tree)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebd0da00-76e4-487d-b26d-e0e1d838f7bf",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4785a26b-63ce-4441-9219-a218332c453f",
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": []
   }
