--- a/Week_2_Seminar.ipynb
+++ b/Week_2_Seminar.ipynb
@@ -347,12 +347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 264,
    "id": "eb7071bc-ae27-409d-a971-aaa06dedcf3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(re.findall(\"ed\", chapter_one))"
+    "print(re.findall(\"ed$\", chapter_one))"
    ]
   },
   {
@@ -667,21 +675,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d272bfb-01df-4ffe-b016-f615c4c90e8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "re.sub(\"([a-z])ed\",r'\\1',chapter_one)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b8971495-514e-4c75-87a1-d2cc4ad0ac15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "to_split_on = re.compile(\" \")\n",
     "chapter_one_tokens_new = to_split_on.split(chapter_one)\n",
     "print(chapter_one_tokens_new)"
@@ -834,20 +831,8 @@
    "outputs": [],
    "source": [
     "porter = nltk.PorterStemmer()\n",
-    "for t in sentence_one_tokens:\n",
+    "for t in chapter_one_tokens:\n",
     "    print(porter.stem(t),end=\" \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f507a1f5-a6e6-4004-95c6-0a46371aa7a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "porter = nltk.PorterStemmer()\n",
-    "for t in sentence_one_tokens:\n",
-    "    print(lanca(t),end=\" \")"
    ]
   },
   {
@@ -865,9 +850,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nltk.download('wordnet')\n",
     "wnl = nltk.WordNetLemmatizer()\n",
-    "for t in sentence_one_tokens:\n",
-    "    print(porter.stem(t),end=\" \")"
+    "for t in chapter_one_tokens:\n",
+    "    print(wnl.lemmatize(t),end=\" \")"
    ]
   }
  ],
