--- a/Week_2_Seminar.ipynb
+++ b/Week_2_Seminar.ipynb
@@ -760,8 +760,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nltk\n",
-    "nltk.download('punkt')"
+    "import nltk"
    ]
   },
   {
@@ -811,6 +810,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nltk.download('punkt')\n",
     "chapter_one_sentences = nltk.sent_tokenize(' '.join(chapter_one_tokens))\n",
     "print(chapter_one_sentences[0])"
    ]
