--- a/Week_2_Seminar.ipynb
+++ b/Week_2_Seminar.ipynb
@@ -497,8 +497,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opening_sentences = chapter_one[0:175]\n",
-    "print(opening_sentences)"
+    "opening_sentence = chapter_one[0:175]\n",
+    "print(opening_sentence)"
    ]
   },
   {
