--- a/Week_2_Seminar.ipynb
+++ b/Week_2_Seminar.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Tokenisation and Morphology\n",
     "\n",
-    "In this week's session we are going to look at how to implement the various preprocessing tasks introduced in the lecture. In doing so we are going to make use of regular expressions, so I will start by introducing these.\n"
+    "In this week's session we are going to look at a tool that is crucial in implementing the preprocessing tasks introduced in the lecture - regular expressions.\n"
    ]
   },
   {
@@ -590,6 +590,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf484c75-7507-4451-a5c0-2add4f37a970",
+   "metadata": {},
+   "source": [
+    "Activity: Use sub combined with groups to convert the sentence \"man bites dog\" into \"dog bites man\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fca864a-617b-447a-9a43-bcd3277475c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = \"man bites dog\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23a48f48-3846-4888-af3a-157ef6b7bc2a",
+   "metadata": {},
+   "source": [
+    "Activity: Use sub to convert the sentence \"man bites dog\" into \"dog is stroked by man\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e54b5b83-c85d-4551-8d2a-cde206df151e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "88c2c1c7-993d-4338-97dd-d3c33c49cc4f",
    "metadata": {},
    "source": [
@@ -647,7 +681,7 @@
    "id": "67651269-ac9b-4956-bcbe-20f54e705108",
    "metadata": {},
    "source": [
-    "## Putting it all together "
+    "## Putting it all together: Some exercises to try in your own time "
    ]
   },
   {
@@ -685,6 +719,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a6b6a1a-4264-4997-bfe0-09d5b7fb94b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "1a8e6896-0712-491e-9343-518b186cb3b2",
    "metadata": {},
@@ -715,146 +757,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7ab6c546-7b79-4f4d-8c70-ce361255fbd9",
-   "metadata": {},
-   "source": [
-    "## Natural Language Toolkit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c380e17a",
-   "metadata": {},
-   "source": [
-    "So far we have looking at the core Python programming language and the re library. However much of the time this semester we will be making use of even more  powerful libraries for natural language processing and machine learning. Today I want to introduce the first of these - \"Natural Language Toolkit\" or nltk.\n",
-    "\n",
-    "The first thing we need to do is to make sure we have the libraries we want installed. On Google Colab they are all already there. If your are using your own machine you will have to install it using the following command (unlike for re which is present by default and just needs to be loaded).\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bec0c63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install nltk # If using anaconda"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3ab644be",
-   "metadata": {},
-   "source": [
-    "In order to use the library we then need to import it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07639361",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nltk"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dc28b620",
-   "metadata": {},
-   "source": [
-    "### Tokenising"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99ec7513",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = open('2554-0.txt')\n",
-    "raw = f.read()\n",
-    "chapter_one = raw[5464:23725]\n",
-    "print(chapter_one)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6d4a46b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chapter_one_tokens = nltk.word_tokenize(chapter_one)\n",
-    "print(chapter_one_tokens)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5bc2fb31-aa51-4934-bd12-0cb8973d4c23",
-   "metadata": {},
-   "source": [
-    "### Sentence Segmentation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1b644fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nltk.download('punkt')\n",
-    "chapter_one_sentences = nltk.sent_tokenize(' '.join(chapter_one_tokens))\n",
-    "print(chapter_one_sentences[0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2e5d92df-d481-45e4-a1e3-6d4543de4586",
-   "metadata": {},
-   "source": [
-    "### Stemming"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca5b84f1-608a-4911-ba4e-9b1972af43c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "porter = nltk.PorterStemmer()\n",
-    "for t in chapter_one_tokens:\n",
-    "    print(porter.stem(t),end=\" \")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2526b3c5-d4c3-40fb-891c-b36935baf5e3",
-   "metadata": {},
-   "source": [
-    "### Lemmatising"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afd979cf-a661-4288-91ca-70deb443e8e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nltk.download('wordnet')\n",
-    "wnl = nltk.WordNetLemmatizer()\n",
-    "for t in chapter_one_tokens:\n",
-    "    print(wnl.lemmatize(t),end=\" \")"
-   ]
   }
  ],
  "metadata": {
