--- a/Week_2_Seminar_with_solutions.ipynb
+++ b/Week_2_Seminar_with_solutions.ipynb
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "for w in chapter_one_tokens:\n",
-    "    if re.search(\".*d\", w):\n",
+    "    if re.search(\".+d\", w):\n",
     "        print(w)"
    ]
   },
