--- a/Week_3_Seminar.ipynb
+++ b/Week_3_Seminar.ipynb
@@ -34,15 +34,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bec0c63",
+   "cell_type": "markdown",
+   "id": "4dc64494-0e13-4efd-ac85-9568afb2d43a",
    "metadata": {
     "id": "7bec0c63"
    },
-   "outputs": [],
    "source": [
-    "!pip install nltk # If using anaconda"
+    "!pip install nltk # If using anaconda convert this to a code window and run"
    ]
   },
   {
@@ -2105,13 +2103,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ea81cd7-c410-4ca8-af51-58aef955cc37",
+   "cell_type": "markdown",
+   "id": "948f663b-d220-4532-9758-7048c313b730",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!pip install -U scikit-learn"
+    "!pip install -U scikit-learn  # If using anaconda convert this to a code window and run"
    ]
   },
   {
