--- a/Week_3_Seminar.ipynb
+++ b/Week_3_Seminar.ipynb
@@ -563,12 +563,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "id": "bcfa6889-c5d5-42f2-8b44-39f9b8561e85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_components = 500\n",
+      "Explained Variance = 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "M_reduced = reduce_to_k_dim(M_co_occurrence, n_components=2)"
+    "M_reduced = reduce_to_k_dim(M_co_occurrence, n_components=500)"
    ]
   },
   {
@@ -990,7 +999,7 @@
    },
    "outputs": [],
    "source": [
-    "!unzip -q glove.6B.zip.2"
+    "!unzip -q glove.6B.zip"
    ]
   },
   {
