--- a/Week_2_Seminar.ipynb
+++ b/Week_2_Seminar.ipynb
@@ -347,18 +347,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "id": "eb7071bc-ae27-409d-a971-aaa06dedcf3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(re.findall(\"ed$\", chapter_one))"
    ]
@@ -611,7 +603,7 @@
    "id": "23a48f48-3846-4888-af3a-157ef6b7bc2a",
    "metadata": {},
    "source": [
-    "Activity: Use sub to convert the sentence \"man bites dog\" into \"dog is stroked by man\""
+    "Activity: Use sub combined with groups to convert the sentence \"man strokes dog\" into \"dog is stroked by man\""
    ]
   },
   {
@@ -704,6 +696,14 @@
     "f = open('2554-0.txt')\n",
     "raw = f.read()\n",
     "chapter_one = raw[5464:23725]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bfe3cac-3e8e-49a1-a7ea-43a5d9fe9ef7",
+   "metadata": {},
+   "source": [
+    "The code below is a simple solution but it has a number of problems as discussed in the lecture. Can you use regular expressions to overcome these problems?"
    ]
   },
   {
